<resources>
    <string name="app_name">WidgetsExample</string>

    <string name="name_hint" translatable="false">Enter your name</string>
    <string name="comments_hint" translatable="false">Enter your comments</string>
    <string name="submit">Submit</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="female" translatable="false">female</string>
    <string name="male" translatable="false">male</string>
    <string name="like_pizza" translatable="false">Like Pizza?</string>
    <!-- Spinner choices -->
    <string-array name="colors">
        <item>Pick a Color</item>
        <item>red</item>
        <item>orange</item>
        <item>yellow</item>
        <item>green</item>
        <item>blue</item>
        <item>indigo</item>
        <item>violet</item>
    </string-array>


</resources>
